Fix for ALF-11492 - NL-DE-ES-IT-FR- Buttons (in Site Finder) need to be aligned
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@31989 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/site-finder/site-finder.css
+++ b/root/projects/slingshot/source/web/components/site-finder/site-finder.css
@@ -75,7 +75,7 @@
 
 .site-finder .yui-dt td.yui-dt-last
 {
-   text-align: center;
+   text-align: right;
 }
 
 .site-finder .yui-dt-last td
@@ -90,7 +90,7 @@
 
 .site-finder .yui-dt-last
 {
-   width: 165px;
+   width: 18em;
 }
 
 .site-finder tr.yui-dt-odd
